order of main changed

--- a/infrastructure/ecs-provider-service.yml
+++ b/infrastructure/ecs-provider-service.yml
@@ -18,6 +18,10 @@ Parameters:
   ClusterName:
     Description: Cluster Name
     Type: String
+  Region:
+    Description: Region name
+    Type: String
+    Default: 'us-east-1'
   ComposerSecurityGroupId:
     Description: Composer Security Group Id
     Type: String
