--- a/infrastructure/ecs-composer-service.yml
+++ b/infrastructure/ecs-composer-service.yml
@@ -14,6 +14,7 @@ Parameters:
     Type: String
   Region:
     Type: String 
+    Default: 'us-east-1'
   ClusterName:
     Description: Cluster Name
     Type: String
