--- a/infrastructure/ecs-provider-service.yml
+++ b/infrastructure/ecs-provider-service.yml
@@ -106,7 +106,7 @@ Resources:
       LaunchType: FARGATE
       NetworkConfiguration:
         AwsvpcConfiguration:
-          AssignPublicIp: ENABLED
+          AssignPublicIp: DISABLED
           SecurityGroups: 
             - !Ref ECSSecurityGroup
           Subnets:
