--- a/infrastructure/dynamodb.yml
+++ b/infrastructure/dynamodb.yml
@@ -2,7 +2,7 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: Creates a dynamodb table and insert item into it (Just for testing purpose)
 
 Resources:
-  TestDynamoDBTable:
+  CreateTestDynamoDBTable:
     Type: "AWS::DynamoDB::Table"
     Properties:
       TableName: "test-dynamodb"
